tests/snapshots/cli_insta__bump-reset.major.1.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - "-o"
    - text
    - bump-reset
    - 1.2.3
    - "--major"
---
success: true
exit_code: 0
----- stdout -----
2.0.0
----- stderr -----
