tests/snapshots/cli_insta__bump-reset.simple.1.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - "-o"
    - text
    - bump-reset
    - 1.2.3
---
success: true
exit_code: 0
----- stdout -----
1.3.0
----- stderr -----
