tests/snapshots/cli_insta__bump.simple.1.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - "-o"
    - text
    - bump
    - 1.1.1
    - "--bump-major=1"
---
success: true
exit_code: 0
----- stdout -----
2.1.1
----- stderr -----
