tests/snapshots/cli_insta__bump.simple.2.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - bump
    - 1.1.1
    - "--bump-major=1"
---
success: true
exit_code: 0
----- stdout -----
---
mutated_version: 2.1.1
----- stderr -----
