tests/snapshots/cli_insta__compare.exit-status.1.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - compare
    - "-e"
    - 1.2.3
    - 1.2.3
---
success: true
exit_code: 0
----- stdout -----
---
semantic_ordering: Equal
lexical_ordering: Equal
----- stderr -----
