tests/snapshots/cli_insta__compare.exit-status.3.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - compare
    - "-e"
    - 4.5.6
    - 1.2.3
---
success: false
exit_code: 122
----- stdout -----
---
semantic_ordering: Greater
lexical_ordering: Greater
----- stderr -----
