tests/snapshots/cli_insta__compare.exit-status.4.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - compare
    - "-e"
    - 1.2.3+1
    - 1.2.3+0
---
success: false
exit_code: 112
----- stdout -----
---
semantic_ordering: Equal
lexical_ordering: Greater
----- stderr -----
